Fix issue with social buttons on mobile

--- a/src/styles/utility/position.scss
+++ b/src/styles/utility/position.scss
@@ -1,5 +1,4 @@
-.u-overlay {
+.u-overlay-bottom {
   position: absolute;
-  top: 0;
-  left: 0;
+  bottom: 0
 }
